--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,18 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>javax.servlet-api</artifactId>
+    	<version>4.0.1</version>
+    	<scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
     <finalName>socratica_crud</finalName>
   </build>
+  <properties>
+  	<maven.compiler.target>11</maven.compiler.target>
+  	<maven.compiler.source>11</maven.compiler.source>
+  </properties>
 </project>
