Able to connect to PostgreSQL DB

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
     	<version>4.0.1</version>
     	<scope>provided</scope>
     </dependency>
+    <dependency>
+	    <groupId>org.postgresql</groupId>
+	    <artifactId>postgresql</artifactId>
+	    <version>42.3.3</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>socratica_crud</finalName>
